# extendcalc

./: Cargo.toml  README.md  justfile
.zed/: settings.json
data/key_definitions/: keys.ron
data/keypad_definitions/: business.ron  conversion.ron  data_keypads.ron  keypads.ron  numbers.ron  scientific.ron  trigonometric.ron  ui_keypads.ron
data/panel_definitions/: business.ron  panel_list.ron  scientific.ron
data/panel_defintions/: business.ron  panel_list.ron  scientific.ron
data/ui/: keypads.ron
docs/: data_structures.md  installation.md
i18n/en/: extendcalc.ftl
resources/: app.desktop  app.metainfo.xml  map outer inner messages and pipes.md
resources/CHATGPT/: AKS message and helper example.md  GLOBAL_config_var.md  GLOBAL_config_var.rs  GlOBAL_config_var.txt  app state and message.md  async loading of RON.md  config vs state.md  cosmic app skeleton.md  delegate view update.md  doing logic on errors.md  error Error enum and alias.md  event dribble down.md  fact vs intent messages.md  five file split utils.md  flattened_message.md  from Struct to Struct.md  gatekeeper.md  going from keygrid to screen.md  grid to button.md  handling events in sub struct.md  iter map vs for example.md  iter map vs for loop.md  naming of enums and collision.md  navbar delegation.md  nested enums for message definition.md  pass String or PathBuf.md  private pubsuper pub.md  refactor to use messaging al the way down.md  render hashmap.md  ron file locations programatically.md  skeleton cosmic extendcalc.md  startup vs mvu loop error.md  struct context conversion.md  (+8 more)
src/: alt_cosmic_app.rs  alt_iced_app.rs  app copy.rs  app.rs  data.rs  globals.rs  main.rs  mod.rs  ui.rs
(+124 files in other folders)
