[package]
name = "extendcalc"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "An extendable calculator for Cosmic DE"
repository = "https://github.com/foodmonkey/extendcalc"

[dependencies]
futures-util = "0.3.31"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
indexmap = { version = "2.7", features = ["serde"] }
open = "5.3.2"
ron = "0.12.0"
rust-embed = "8.8.0"
serde = { version = "1.0.228", features = ["derive", "rc"]}
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # About widget for the app
    "about",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
